# serialization_expt

./: CMakeLists.txt  README.md  avro_test.cpp  capnproto_test.cpp  flatbuffers_test.cpp  json_test.cpp  serializers_expt.cpp  test.capnp  test.fbs  test.json
